--- a/data/user_settings/user_settings.json
+++ b/data/user_settings/user_settings.json
@@ -148,6 +148,14 @@
                 "HOUSE",
                 "LAND"
             ]
+        },
+        {
+            "name": "TRAVEL",
+            "subcategories": [
+                "FLIGHT",
+                "HOTEL",
+                "MISC"
+            ]
         }
     ],
     "rules": [
