workign: local commit

--- a/data/user_settings/user_settings.json
+++ b/data/user_settings/user_settings.json
@@ -1676,6 +1676,19 @@
                 }
             ],
             "note": ""
+        },
+        {
+            "category": "TRAVEL",
+            "subcategory": "FLIGHT",
+            "logical_operator": "AND",
+            "conditions": [
+                {
+                    "field": "Description",
+                    "rule_type": "contains",
+                    "value": "IndiGo Airlines DELHI"
+                }
+            ],
+            "note": ""
         }
     ],
     "budgets": [
