--- a/src/frontend/expense-visualizer/package.json
+++ b/src/frontend/expense-visualizer/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^3.3.0",
+    "react-router-dom": "^6.25.1",
     "uuid": "^13.0.0",
     "web-vitals": "^2.1.4"
   },
