--- a/src/frontend/expense-visualizer/package.json
+++ b/src/frontend/expense-visualizer/package.json
@@ -10,15 +10,16 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.1",
+    "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-chartjs-2": "^5.3.1",
     "react-datepicker": "^8.10.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "recharts": "^3.3.0",
-    "react-router-dom": "^6.25.1",
     "uuid": "^13.0.0",
     "web-vitals": "^2.1.4"
   },
